fix inline code hard to read

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -3,6 +3,9 @@ body {
     font-family: 'Inconsolata', ;
     color: $iron;
     background-color: $dorian;
+    code.highlighter-rouge {
+        color: $gold;
+    }
 }
 
 a {
