--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ sitemap:
 $dorian: #F5F5F5;
 $iron: #333333;
 $cloudy: #828282;
-
+$gold: #998100;
 @import
     "mixins",
     "default",
